cli/test/fixtures/bad/nested_cards.dart
// Bad: Card nested inside Card
final w = Card(child: Card(child: Text('nested')));
